fix(tabs-extended): aligning tabs and basic content to grid

--- a/packages/styles/scss/components/tabs-extended/_tabs-extended.scss
+++ b/packages/styles/scss/components/tabs-extended/_tabs-extended.scss
@@ -1,5 +1,5 @@
 /**
- * Copyright IBM Corp. 2016, 2021
+ * Copyright IBM Corp. 2016, 2022
  *
  * This source code is licensed under the Apache-2.0 license found in the
  * LICENSE file in the root directory of this source tree.
@@ -26,7 +26,7 @@
 
       .#{$prefix}--tabs__nav-item {
         min-height: $spacing-09;
-        width: $spacing-13;
+        width: calc(100% / (12 / 2) - (#{$spacing-01} / 2));
         height: auto;
 
         p {
